--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -6,7 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    d:DesignHeight="300" d:DesignWidth="300"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <StackPanel Orientation="Vertical">
@@ -24,17 +23,15 @@
             </MenuBarItem>
         </MenuBar>
         <StackPanel Orientation="Horizontal">
-            <StackPanel x:Name="colButs" Orientation="Vertical"> <!--collection buttons-->
-                <Button Margin="10"> collection 1</Button>
-                <Button Margin="10"> collection 2</Button>
-                <Button Margin="10"> collection 3</Button>
-
-            </StackPanel>
-            <StackPanel Orientation="Vertical"> <!--item view-->
-
-
-
-            </StackPanel>
+            <ScrollViewer>
+                <StackPanel x:Name="colButs" Orientation="Vertical">
+                    <!--collection buttons-->
+                    <Button Margin="10">New Collection</Button>
+                    <Button Margin="10">collection 2</Button>
+                    <Button Margin="10">collection 3</Button>
+                    
+                </StackPanel>
+            </ScrollViewer>
         </StackPanel>
     </StackPanel>
 </Page>
