--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -22,13 +22,10 @@
                 <MenuFlyoutItem Text="About"/>
             </MenuBarItem>
         </MenuBar>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal"> <!--main screen-->
             <ScrollViewer>
-                <StackPanel x:Name="colButs" Background="DimGray" Orientation="Vertical">
-                    <!--collection buttons-->
+                <StackPanel x:Name="colButs" Background="DimGray" Orientation="Vertical" Height="10000"> <!--collection buttons-->
                     <Button Margin="10" Width="200">New Collection (+)</Button>
-                    <!-- this stays here -->
-
                 </StackPanel>
             </ScrollViewer>
             <Grid x:Name="ItemGrid" Width="500" >
@@ -51,8 +48,6 @@
                 <Rectangle Grid.Row="1" Grid.Column="1" Fill="Aqua" Height="50" Margin="4"/>
                 <Rectangle Grid.Row="2" Grid.Column="0" Fill="Aqua" Height="50" Margin="4"/>
                 <Rectangle Grid.Row="3" Grid.Column="3" Fill="Aqua" Height="50" Margin="4"/>
-
-
             </Grid>
         </StackPanel>
     </StackPanel>
