--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,7 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <StackPanel Orientation="Vertical">
+    <StackPanel x:Name="mainPage" Orientation="Vertical">
         <MenuBar>
             <MenuBarItem Title="File">
                 <MenuFlyoutItem Text="Export"/>
