--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -8,8 +8,7 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <StackPanel Orientation="Vertical" Background="#202020">
-    <StackPanel x:Name="mainPage" Orientation="Vertical">
+    <StackPanel Orientation="Vertical" Background="#202020" x:Name="mainPage">
         <MenuBar>
             <MenuBarItem Title="File">
                 <MenuFlyoutItem Text="Export"/>
