--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -26,10 +26,7 @@
             <StackPanel x:Name="Home" Orientation="Horizontal">
                 <ScrollViewer>
                     <StackPanel x:Name="colButs" Background="#303030" Orientation="Vertical">
-                        <!--collection buttons-->
                         <Button x:Name="colButton" Margin="10" Width="200" Click="NewCollectionFunc">New Collection (+)</Button>
-                        <!-- this stays here -->
-
                     </StackPanel>
                 </ScrollViewer>
                 <Grid x:Name="ItemGrid" Width="500" ColumnSpacing="25" RowSpacing="25">
@@ -52,9 +49,9 @@
             <TextBox x:Name="itemDescription" Header="Enter item Description" PlaceholderText="Description" Width="400" Height="200" Margin="20" Visibility="Visible" HorizontalAlignment="Left"/>
             <TextBox x:Name="itemPrice" Header="Enter Price" PlaceholderText="Price" Width="150" Height="75" Margin="20" Visibility="Visible" HorizontalAlignment="Left"/>
             <TextBox x:Name="itemCondition" Header="Enter Conditoion" PlaceholderText="Condition" Width="150" Height="75" Margin="20" Visibility="Visible" HorizontalAlignment="Left"/>
-            <Button x:Name="addItemConfirm" Content="Add Item" Click="newItemConfirm" Width="75" Height="25"/>
-            <Button x:Name="addItemImage" Content="Add Image" Height="25" Width="50" Click="addImageInAddItem"/>
-
+            <Button x:Name="addItemConfirm" Content="Add Item" Click="newItemConfirm" Width="100" Height="40" Margin="20"/>
+            <Button x:Name="addItemImage" Content="Add Image" Height="40" Width="100" Click="addImageInAddItem" Margin="20"/>
         </StackPanel>
+        
     </StackPanel>
 </Page>
