--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -10,7 +10,7 @@
 
     <StackPanel Orientation="Vertical" Background="#202020">
         <StackPanel x:Name="mainPage" Orientation="Vertical">
-            <MenuBar>
+            <MenuBar Background="#404040">
                 <MenuBarItem Title="File">
                     <MenuFlyoutItem Text="Export"/>
                     <MenuFlyoutItem Text="Exit"/>
@@ -26,7 +26,7 @@
             <StackPanel x:Name="Home" Orientation="Horizontal">
                 <ScrollViewer>
                     <StackPanel x:Name="colButs" Background="#303030" Orientation="Vertical">
-                        <Button x:Name="colButton" Margin="10" Width="200" Click="NewCollectionFunc">New Collection (+)</Button>
+                        <Button x:Name="colButton" Margin="10" Width="200" Height="50" CornerRadius="10" Click="NewCollectionFunc">New Collection (+)</Button>
                     </StackPanel>
                 </ScrollViewer>
                 <Grid x:Name="ItemGrid" Width="500" ColumnSpacing="25" RowSpacing="25">
@@ -59,5 +59,6 @@
             <Button x:Name="addAtt" Grid.Row="5" Grid.Column="5"/>
             <Button x:Name="subAtt" Grid.Row="5" Grid.Column="8"/>
         </Grid>
+        
     </StackPanel>
 </Page>
