Push screen changes

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -32,8 +32,9 @@
                         <Button x:Name="colButton" Margin="10" Width="200" Height="50" CornerRadius="10" Click="NewCollectionFunc">New Collection (+)</Button>
                     </StackPanel>
                 </ScrollViewer>
-                <Grid x:Name="ItemGrid" Width="500" ColumnSpacing="25" RowSpacing="25">
+                <Grid x:Name="ItemGrid" Width="500" ColumnSpacing="25" RowSpacing="25" Cont>
                     <!--item view--> 
+                    
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="100" />
                     </Grid.ColumnDefinitions>
