--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -55,12 +55,14 @@
             <Button x:Name="addItemImage" Margin="10" HorizontalAlignment="left" Content="Add Image" Height="50" Width="150" Click="addImageInAddItem"/>
             <Button x:Name="addItemConfirm" Content="Add Item" Click="newItemConfirm" Margin="10" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen"/>
         </StackPanel>
-        <Grid x:Name="addCollection" Visibility="Collapsed">
-            <TextBox x:Name="colName" Grid.Row="0" Grid.Column="0" Header="Enter Collection Name" PlaceholderText="Name" Width="300" HorizontalAlignment="Left" Margin="25"/>
-            <TextBox x:Name="attText" Grid.Row="2" Grid.Column="0" Header="Enter an Attribute" PlaceholderText="Attribute" Width="200" HorizontalAlignment="Left" Margin="25"/>
-            <Button x:Name="addAtt" Grid.Row="5" Grid.Column="5"/>
-            <Button x:Name="subAtt" Grid.Row="5" Grid.Column="8"/>
-        </Grid>
+        <StackPanel x:Name="addCollection" Orientation="Vertical" Visibility="Collapsed">
+            <TextBox x:Name="colName" Header="Enter Collection Name" PlaceholderText="Name" Width="300" HorizontalAlignment="Left" Margin="25"/>
+            <TextBox x:Name="attText" Header="Enter an Attribute" PlaceholderText="Attribute" Width="200" HorizontalAlignment="Left" Margin="25"/>
+            <StackPanel x:Name="attButs" Orientation="Horizontal" Visibility="Visible">
+                <Button x:Name="addAtt" Content="Add" Margin="10"/>
+                <Button x:Name="subAtt" Content="Sub" Margin="10"/>
+            </StackPanel>
+        </StackPanel>
         <StackPanel x:Name="singleItemView" Orientation="Vertical" Visibility="Collapsed">
             <Image x:Name="singleItemImage" Width="200" Height="200" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="25"/>
             <TextBox x:Name="singleViewName" Header="Name" PlaceholderText="" Width="300" HorizontalAlignment="Left" Margin="25" Visibility="Visible" IsEnabled="False"/>
