import and export

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -12,8 +12,9 @@
         <StackPanel x:Name="mainPage" Orientation="Vertical">
             <MenuBar Background="#404040">
                 <MenuBarItem Title="File">
-                    <MenuFlyoutItem Text="Export"/>
-                    <MenuFlyoutItem Text="Exit"/>
+                    <MenuFlyoutItem Text="Export Collection" Click="exportCol"/>
+                    <MenuFlyoutItem Text="Import Collection" Click="importCol"/>
+                    <MenuFlyoutItem Text="Exit" Click="clickExit"/>
                 </MenuBarItem>
                 <MenuBarItem Title="Edit">
                     <MenuFlyoutItem Text="Add Item"/>
@@ -32,7 +33,7 @@
                         <Button x:Name="colButton" Margin="10" Width="200" Height="50" CornerRadius="10" Click="NewCollectionFunc">New Collection (+)</Button>
                     </StackPanel>
                 </ScrollViewer>
-                <Grid x:Name="ItemGrid" Width="500" ColumnSpacing="25" RowSpacing="25" Cont>
+                <Grid x:Name="ItemGrid" Width="500" ColumnSpacing="25" RowSpacing="25">
                     <!--item view--> 
                     
                     <Grid.ColumnDefinitions>
