--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -68,13 +68,30 @@
                 <Button x:Name="subAtt" Content="Sub" Margin="10"/>
             </StackPanel>
                 <Button x:Name="addItemConfirmCol" Content="Add Collection" Click="NewCollectionConfirm" Margin="10" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen"/>
+
         </StackPanel>
-        <StackPanel x:Name="singleItemView" Orientation="Vertical" Visibility="Collapsed">
-            <Image x:Name="singleItemImage" Width="200" Height="200" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="25"/>
-            <TextBox x:Name="singleViewName" Header="Name" PlaceholderText="" Width="300" HorizontalAlignment="Left" Margin="25" Visibility="Visible" IsEnabled="False"/>
-            <TextBox x:Name="singleViewDescription" Header="Description" PlaceholderText="" Width="400" Height="200" Margin="20" Visibility="Visible" HorizontalAlignment="Left" IsEnabled="False"/>
-            <TextBox x:Name="singleViewPrice" Header="Price" PlaceholderText="" Width="150" Height="75" Margin="20" Visibility="Visible" HorizontalAlignment="Left" IsEnabled="False"/>
-            <TextBox x:Name="singleViewCondition" Header="Condition" PlaceholderText="" Width="150" Height="75" Margin="20" Visibility="Visible" HorizontalAlignment="Left" IsEnabled="False"/>
-        </StackPanel>
+        <Grid x:Name="singleItemView" Visibility="Visible">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <StackPanel x:Name="nameDescPanel" Grid.Column="0" Orientation="Vertical" Visibility="Visible" HorizontalAlignment="Stretch">
+                <TextBox x:Name="singleViewName" Header="Name" PlaceholderText="" HorizontalAlignment="Stretch" Margin="20" Visibility="Visible" IsEnabled="False"/>
+                <TextBox x:Name="singleViewDescription" Header="Description" PlaceholderText="" Height="Auto" MinHeight="200" Margin="20" Visibility="Visible" HorizontalAlignment="Stretch" IsEnabled="False"/>
+                <Button x:Name="saveItemChanges" Content="Save Changes" Visibility="Collapsed" HorizontalAlignment="Left" Margin="20" Click="singleViewSaveClick"/>
+                <Button x:Name="editItem" Content="Edit Item" Visibility="Visible" HorizontalAlignment="Left" Margin="20" Click="singleViewEditClick"/>
+            </StackPanel>
+            <ScrollViewer x:Name="attributeScroller" Height="860" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Grid.Column="1">
+                <StackPanel x:Name="attributePanel" Orientation="Vertical" Visibility="Visible">
+                    <TextBox x:Name="singleViewPrice" Header="Price" TextWrapping="Wrap" PlaceholderText="" Height="Auto" Width="Auto" Margin="20" Visibility="Visible" HorizontalAlignment="Stretch" IsEnabled="False"/>
+                    <TextBox x:Name="singleViewCondition" Header="Condition" PlaceholderText="" Height="Auto" Margin="20" Visibility="Visible" HorizontalAlignment="Stretch" IsEnabled="False"/>
+                </StackPanel>
+            </ScrollViewer>
+            <Image x:Name="singleItemImage" Grid.Column="2" Stretch="Fill" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="25"/>
+        </Grid>
     </StackPanel>
 </Page>
