--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -78,8 +78,10 @@
                 </StackPanel>
                 <Button x:Name="addColConfirm" Content="Add Collection" Click="NewCollectionConfirm" Margin="10" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen"/>
             </StackPanel>
-            <StackPanel x:Name="collectionAttributeView"/>
-        </StackPanel>
+            <StackPanel x:Name="collectionAttributeView" Orientation="Vertical">
+                <TextBlock Text="Attributes" Foreground="White" Margin="25"/>
+            </StackPanel>
+            </StackPanel>
        
         <Grid x:Name="singleItemView" Visibility="Visible">
             
