--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -50,21 +50,29 @@
             </StackPanel>
         </StackPanel>
         <StackPanel x:Name="addItem" Orientation="Horizontal" Visibility="Collapsed">
+
             <StackPanel x:Name="addItemFields" Orientation="Vertical" Visibility="Visible">
                 <StackPanel Orientation="Horizontal" Visibility="Visible">
                     <TextBox x:Name="addItemName" Header="Enter item name" PlaceholderText="Name" Width="300" HorizontalAlignment="Left" Margin="25" Visibility="Visible"/>
                     <TextBlock x:Name="itemRequiredField" Text="*required" Foreground="Red" Visibility="Collapsed"/>
                 </StackPanel>
+                
                 <StackPanel Orientation="Horizontal" Visibility="Visible">
                     <TextBox x:Name="addItemDescription" Header="Enter item Description" PlaceholderText="Description" Width="400" Height="200" Margin="20" Visibility="Visible" HorizontalAlignment="Left"/>
                     <TextBlock x:Name="itemRequiredFieldDesc" Text="*required" Foreground="Red" Visibility="Collapsed"/>
                 </StackPanel>
+                
                 <Button x:Name="addItemImage" Margin="10" HorizontalAlignment="left" Content="Add Image" Height="50" Width="150" Click="addImageInAddItem"/>
                 <Button x:Name="addItemConfirm" Content="Add Item" Click="newItemConfirm" Margin="10" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen"/>
             </StackPanel>
+            
             <StackPanel Width="150"/>
-            <ScrollViewer x:Name="attributeSpace" Height="860" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled"/>
+            <ScrollViewer x:Name="attributeSpace" Height="860" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled">
+                <StackPanel x:Name="addItemAttributePanel" Orientation="Vertical" Visibility="Visible"/>
+            </ScrollViewer>
+
         </StackPanel>
+        
         <StackPanel x:Name="addCollection" Orientation="Horizontal" Visibility="Collapsed">
             <StackPanel x:Name="collectionStuff" Orientation="Vertical" Visibility="Visible">
                 <StackPanel Orientation="Horizontal" Visibility="Visible">
