--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -49,8 +49,9 @@
                 </Grid>
             </StackPanel>
         </StackPanel>
+        
         <StackPanel x:Name="addItem" Orientation="Horizontal" Visibility="Collapsed">
-
+            
             <StackPanel x:Name="addItemFields" Orientation="Vertical" Visibility="Visible">
                 <StackPanel Orientation="Horizontal" Visibility="Visible">
                     <TextBox x:Name="addItemName" Header="Enter item name" PlaceholderText="Name" Width="300" HorizontalAlignment="Left" Margin="25" Visibility="Visible"/>
@@ -62,14 +63,19 @@
                     <TextBlock x:Name="itemRequiredFieldDesc" Text="*required" Foreground="Red" Visibility="Collapsed"/>
                 </StackPanel>
                 
-                <Button x:Name="addItemImage" Margin="10" HorizontalAlignment="left" Content="Add Image" Height="50" Width="150" Click="addImageInAddItem"/>
                 <Button x:Name="addItemConfirm" Content="Add Item" Click="newItemConfirm" Margin="10" VerticalAlignment="Bottom" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen"/>
             </StackPanel>
+
             
             <StackPanel Width="150"/>
             <ScrollViewer x:Name="attributeSpace" Height="860" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled">
                 <StackPanel x:Name="addItemAttributePanel" Orientation="Vertical" Visibility="Visible"/>
             </ScrollViewer>
+            
+            <StackPanel x:Name="addImagePanel" Orientation="Vertical">
+                <Image x:Name="itemImage" Source="ms-appx:///Assets/placeHolder.png"/>
+                <Button x:Name="addItemImage" Margin="10" HorizontalAlignment="Center" Content="Add Image" Height="50" Width="150" Click="addImageInAddItem"/>
+            </StackPanel>
 
         </StackPanel>
         
