--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -77,7 +77,7 @@
 
         </StackPanel>
         
-        <StackPanel x:Name="addCollection" Orientation="Horizontal" Visibility="Collapsed">
+        <StackPanel x:Name="addCollection" KeyDown="addColConfirm_KeyDown" PreviewKeyDown="" Orientation="Horizontal" Visibility="Collapsed">
             <StackPanel x:Name="collectionStuff" Orientation="Vertical" Visibility="Visible">
                 <StackPanel Orientation="Horizontal" Visibility="Visible">
                     <TextBox x:Name="colName" Header="Enter Collection Name" PlaceholderText="Name" Width="300" HorizontalAlignment="Left" Margin="25"/>
