fixed sub button again

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -109,8 +109,9 @@
                 </StackPanel>
                 <Button x:Name="addColConfirm" Content="Add Collection" Click="NewCollectionConfirm" Margin="10" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen"/>
             </StackPanel>
+            
             <StackPanel x:Name="collectionAttributeView" Orientation="Vertical" Visibility="Visible">
-                <TextBlock Text="Attributes" Foreground="White" Margin="25"/>
+                <TextBlock Text="Attributes" Foreground="White" Margin="25" Visibility="Visible"/>
             </StackPanel>
             </StackPanel>
        
