--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -119,11 +119,12 @@
                     <TextBox x:Name="colDescription" Header="Collection Description" Width="auto" MinHeight="200" PlaceholderText="Description" HorizontalAlignment="Stretch" Margin="25,0,25,25"/>
                 </StackPanel>
                 <Button x:Name="addColConfirm" Content="Add Collection" Click="NewCollectionConfirm" Margin="10" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen"/>
+                <Button x:Name="editColConfirm" Content="Edit Collection" Click="EditCollectionConfirm" Margin="10" HorizontalAlignment="Center" Width="200" Height="50" Background="ForestGreen" Visibility="Collapsed"/>
             </StackPanel>
             
             <StackPanel x:Name="collectionAttributeView" Grid.Column="1" Orientation="Vertical">
                 <TextBlock Text="Attributes" Foreground="White" FontSize ="20" Margin="25" HorizontalAlignment="Center" TextDecorations="Underline"/>
-                <ScrollViewer x:Name="collectionAttributeScroller" MinHeight="100" MaxHeight="500" Background="Black" BorderBrush="White" BorderThickness="1" Margin="25,0">
+                <ScrollViewer x:Name="collectionAttributeScroller" MinHeight="300" MaxHeight="500" Background="Black" BorderBrush="White" BorderThickness="1" Margin="25,0">
                     <StackPanel x:Name="collectionAttributeList" Orientation="Vertical"/>
                 </ScrollViewer>
                 <TextBox x:Name="attText" Header="Enter an Attribute" Width="Auto" PlaceholderText="Attribute" HorizontalAlignment="Stretch" Margin="25,10"/>
